# edu-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  README.md  progress.txt  pyproject.toml
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml  deploy.yml
config/: model_config.dev.yaml
docs/adr/: 0001-three-tier-rag-corpus.md  0002-two-mode-agent-architecture.md  0003-language-scope-english-first-multilingual-extensible.md  0004-rag-pipeline-stack.md  0005-application-is-gre-test-prep.md  0006-eval-pipeline.md  0007-model-selection-and-provider-abstraction.md  0008-guardrails.md  0009-deployment-pipeline.md  0010-observability-mcp-ux.md  0011-microservices-architecture.md
docs/agents/: domain.md
docs/design-log/: 0001-rag-pipeline-trade-space.md  0002-eval-pipeline-trade-space.md  (+3 more)
evals/: baseline.json  human_review_queue.py  loader.py  regression.py  run_eval.py
infra/: docker-compose.yml
mcp_servers/: admin_server.py  candidate_server.py
tests/: test_agent_bootstrap.py  test_agent_registry.py  test_aw_agent_solve.py  test_aw_agent_tutor.py  test_chat_endpoint.py  test_chunk_payload.py  test_chunker.py  test_cicd.py  test_corpus_retriever.py  test_embedder.py  test_eval_harness.py  test_generate_endpoint.py  test_guardrails.py  test_ingestion_api.py  test_math_verifier_sandbox.py  test_mcp_servers.py  test_observability.py  test_orchestrator.py  test_prompt_versioning.py  test_quant_agent.py  test_quant_agent_solve.py  test_rag_pipeline.py  test_verify_math_route.py  test_verify_math_skill.py
web/: package-lock.json  package.json
(+82 files in other folders)
