[project]
name = "edu-agent"
version = "0.1.0"
description = "GRE test-prep tutor — agentic AI engineering reference implementation"
requires-python = ">=3.12"
dependencies = [
    # LLM
    "litellm>=1.40.0",
    "openai>=1.30.0",
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
    # Data / validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Queue
    "pgmq>=1.0.0",
    # Vector store
    "qdrant-client>=1.9.0",
    # MCP
    "mcp>=1.0.0",
    # Observability
    "langfuse>=2.30.0",
    # Math verification
    "sympy>=1.12",
    # Document parsing
    "pypdf>=4.2.0",
    "python-docx>=1.1.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.2.0",
    "tenacity>=8.3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
